new activities with back button on bar

--- a/app/src/main/res/layout/activity_first_page2.xml
+++ b/app/src/main/res/layout/activity_first_page2.xml
@@ -11,7 +11,7 @@
         android:layout_width="128dp"
         android:layout_height="58dp"
         android:onClick="receive_window"
-        android:text="Receive Data"
+        android:text="Antrenare"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -23,7 +23,8 @@
         android:id="@+id/predict"
         android:layout_width="128dp"
         android:layout_height="58dp"
-        android:text="Predict"
+        android:onClick="prediction_window"
+        android:text="Predictie"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
